2008-09-08  Quentin Mathe <qmathe@club-internet.fr>

	Fixed UUID collisions on Linux by porting FreeBSD srandomdev() to it. If a 
	program is run several times, clock() returns relatively often an identical 
	value and with the low precision: 13000, 17000 etc. for example with ukrun 
	on my machine. This number is used as a seed, so identical sequences of 
	UUIDs can easily happen on Linux. This problem would also occur for multiple 
	programs that run concurrently and create UUIDs.
	* Source/ETUUID.m: Added ETSRandomDev() and modified INITRANDOM to use it if
	srandomdev() isn't available.
	* Source/TestUUID.m (-testString): Added a new test for collisions between 
	random sequences. Turned on collision test by default.

2008-07-31  Quentin Mathe <qmathe@club-internet.fr>

	+allSubclasses and +directSubclasses tested with EtoileUI on Mac OS X.
	* Headers/NSObject+Etoile.h:
	* Source/NSObject+Etoile.m:
	(+allSubclasses, +directSubclasses):
	Fixed this buggy code I wrote yesterday. My loop test was wrong and I wasn't
	taking in account the fact only NSObject root class implements 
	-isSubclassOfClass:, other root classes may not (for example Object).
	(ETGetSuperclass(), ETIsSubclassOfClass()): New private functions working
	as a little abstraction layer over GNU, NeXT 1 and 2 runtimes. Could be made 
	public in future.

2008-07-30  Quentin Mathe <qmathe@club-internet.fr>

	Mac OS X backport.
	* Headers/EtoileCompatibility.h: Replaced an incorrect reference to 
	'EtoileUI' by 'EtoileFoundation'.
	* Headers/EtoileFoundation.h: Disabled problematic headers on Mac OS X.
	* Source/ETUUID.m: Modified to include GNUstep macros through 
	EtoileCompatibility.h.

2008-07-30  Quentin Mathe <qmathe@club-internet.fr>

	* Headers/NSObject+Etoile.h:
	* Source/NSObject+Etoile.m:
	(+allSubclasses, +directSubclasses):
	New methods based on GSObjCRuntime API and NeXT runtime API.

2008-07-28  Quentin Mathe <qmathe@club-internet.fr>
