@@ -4,8 +4,7 @@ SUBPROJECT_NAME = libEtoileFoundation
 
 # At a future point, we could use libosspuuid (see ../GNUmakefile):
 #libEtoileFoundation_INCLUDE_DIRS += $(shell uuid-config --cflags)
-libEtoileFoundation_CPPFLAGS += -D_POSIX_C_SOURCE=199506 -D__BSD_VISIBLE \
-	-D__XSI_VISIBLE -D_GNU_SOURCE
+libEtoileFoundation_CPPFLAGS += -D_GNU_SOURCE -DUKTEST_LONG
 
 libEtoileFoundation_OBJCFLAGS += -std=c99 
 libEtoileFoundation_CFLAGS += -std=c99
